<resources>
    <string name="app_name">VRS</string>
    <string name="mainCategory">Category</string>
    <string name="category1">Explore</string>
    <string name="category2">Bike</string>
    <string name="category3">Car</string>
    <string name="category4">Bus</string>
    <string name="category5">Auto Rikshaw</string>
    <string name="category6">Tractor</string>
    <string name="category7">Delivery Van</string>
    <string name="category8">Truck</string>
    <string name="topRated">Top Rated</string>
    <string name="topRatedSeeAll">See All</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="book_now">Book Now</string>
    <string name="most_rented">Most Rented</string>
    <string name="favorite_fragment">Hello favorite fragment</string>
    <string name="history_fragment">Hello history fragment</string>
    <string name="search_fragment">Hello search fragment</string>
    <string name="your_favorites">Your Favorites</string>
    <string name="status">Status:</string>
    <string name="rating">Rating:</string>
    <string name="price">Price:</string>
    <string name="name">Name:</string>
    <string name="action_settings">Settings</string>
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <string name="level_text">Level %1$d</string>
    <!-- -
    This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
    For more information, see https://support.google.com/admob/answer/3052638
<!- -->
    <string name="interstitial_ad_unit_id">YOUR_INTERSTITIAL_AD_UNIT_ID</string>
    <string name="logout">Logout</string>
    <string name="about_us">About us</string>
    <string name="rate_us">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="support_help">Support/Help?</string>
    <string name="change_password">Change Password</string>
    <string name="earn_with_us">Become Owner</string>
    <string name="apply_for_kyc">Apply for KYC</string>
    <string name="OpenDrawer">Open Navigation Drawer</string>
    <string name="CloseDrawer">Close Navigation Drawer</string>
    <string name="profile">Profile</string>
    <string name="help_amp_legal"><![CDATA[HELP & LEGAL]]></string>
    <string name="settings">SETTINGS</string>
    <string name="more">MORE</string>
    <string name="lets_bang_with_gang">Lets bang with gang</string>
    <string name="designed_by_c_g">Powered by C-G</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="q1">Q.1 How can I book Vehicles?</string>
    <string name="q2">Q.2 How I can become an Owner?</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="randomText">Are you sure you want to change your Password?</string>
    <string name="add_your_vehicle">Add Your Vehicle</string>

    <string name="termss">

    </string>


</resources>