<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/favCardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="20dp"
        android:backgroundTint="#E5E7FA">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/favVehicleImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/favVName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="17sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toEndOf="@+id/favVehicleImage"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/favVehicleName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toEndOf="@+id/favVName"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/favVPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="17sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toEndOf="@+id/favVehicleImage"
                app:layout_constraintTop_toBottomOf="@+id/favVName"/>

            <TextView
                android:id="@+id/favVehiclePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toEndOf="@+id/favVPrice"
                app:layout_constraintTop_toBottomOf="@+id/favVehicleName"/>

            <TextView
                android:id="@+id/favVStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textSize="17sp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toEndOf="@+id/favVehicleImage"
                app:layout_constraintTop_toBottomOf="@+id/favVPrice"/>

            <TextView
                android:id="@+id/favVehicleStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toEndOf="@+id/favVStatus"
                app:layout_constraintTop_toBottomOf="@+id/favVehiclePrice"/>

            <TextView
                android:id="@+id/favBookBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Book Now"
                android:textSize="17sp"
                android:background="@drawable/botton_bg"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toEndOf="@+id/favVehicleStatus"
                app:layout_constraintTop_toBottomOf="@+id/favVehicleStatus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>